fix: filter dropdown alignment & subsidiary node link and shape improvemnts

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -810,10 +810,10 @@
                 }
                 
                 @extend .row,.gap-3,.flex-wrap,.w-100,.bg-transparent;
-                @media (max-width:1200px) {
-                    gap: 10px !important;
+                @media (min-width:700px) and (max-width:1200px) {
+                    gap: 5px !important;
                 }
-                @media (min-width:1393px) and (max-width:1433px) {
+                @media (min-width:1300px) and (max-width:1433px) {
                     gap: 11px !important;
                 }
                 & div{
